Fix blurry images and add skills section

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -53,7 +53,14 @@ img {
     width: 100%;
     height: 350px;
     margin-bottom: 20px;
-    border-radius: 30px;
+    border-radius: 10px;
+}
+
+.sharp {
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 .wrapper {
